--- a/home.css
+++ b/home.css
@@ -1,9 +1,23 @@
 html,
 body {
-  height: 100%;
+  height: 100vh;
+  width: 100vw;
   margin: 0;
   background-color: rgb(255, 255, 255);
+  padding: 0;
 
+}
+
+button {
+  display: block;
+  position: absolute;
+  top: 600px;
+  left: 47%;
+}
+
+.container-fluid:hover {
+  opacity: 0.5;
+  transition: 0.6s;
 }
 
 .login a {
@@ -27,6 +41,7 @@ body {
 }
 
 
+
 body {
   display: flexbox;
   overflow-x: hidden;
@@ -37,6 +52,13 @@ body {
 
 section {
   background-color: rgb(255, 255, 255);
+}
+
+#cab {
+  position: fixed;
+  display: block;
+  width: 100vw;
+  z-index: 1;
 }
 
 .produtos img {
@@ -141,9 +163,9 @@ section {
 
 #textcaixa {
   padding: 5px;
-  background-color: #3586ff;
+  background-color: #570083;
   position: relative;
-  top: -40px;
+  top: -50px;
   border: 2px solid black;
 }
 
@@ -299,6 +321,12 @@ div.produtos figure {
   transform: translate(-50%);
 }
 
+#textmy {
+  display: block;
+  position: relative;
+  top: 100px;
+}
+
 .bar {
   width: 70px;
   height: 17px;
@@ -358,19 +386,23 @@ input {
   width: 600px;
   position: relative;
   left: 460px;
+  top: 100px;
 }
 
 
 footer {
-  position: relative;
+  position: absolute;
   width: 100vw;
-  background: #3586ff;
-  min-height: 100px;
-  padding: 20px 50px;
+  height: 100vh;
+  background: #570083;
+
+  padding: 5px 5px 5px 5px;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
+
+
 }
 
 
